More HF instead of civitai, progress on wget

--- a/comfyui-without-flux/Dockerfile
+++ b/comfyui-without-flux/Dockerfile
@@ -147,7 +147,7 @@ COPY --chmod=755 scripts/disable_mixlab.sh /scripts/disable_mixlab.sh
 
 # make directory and download face_yolov8m.pt
 RUN mkdir -p /ComfyUI/models/ultralytics/bbox && \
-    wget -q "https://huggingface.co/Bingsu/adetailer/resolve/main/face_yolov8m.pt?download=true" -O /ComfyUI/models/ultralytics/bbox/face_yolov8m.pt
+    wget -q --show-progress "https://huggingface.co/Bingsu/adetailer/resolve/main/face_yolov8m.pt?download=true" -O /ComfyUI/models/ultralytics/bbox/face_yolov8m.pt
 
 # # ComfyUI-Impact-controlnet_aux
 # RUN cd /ComfyUI/custom_nodes && \
